--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-reveal": "^1.2.2",
     "styled-components": "^5.3.0",
     "webpack": "^5.41.1"
   },
