--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
+    "react-scroll": "^1.8.2",
     "styled-components": "^5.3.0",
     "webpack": "^5.41.1"
   },
